<resources>
    <string name="app_name">labsheet04</string>
    <string name="name"></string>
    <string name="btn1">Sign Up</string>
    <string name="nameId">Name</string>
    <string name="email">Email</string>
    <string name="tp">Telephone</string>
    <string name="password">Password</string>
    <string name="validate">Re enter password</string>
    <string name="btnreg">Register</string>
    <string name="cancel">Cancel</string>
    <string name="channel_name">Notification</string>
    <string name="channel_description"> registraton error</string>
</resources>
